Add new image assets for White theme
- Added WallClingR1.png, chase1.png, chase2.png, and shime11.png to the White directory.
- These images enhance the visual elements of the application and support the overall design aesthetic.